# Image_Processor

./: CMakeLists.txt  README.md  image_processor.cpp
bmp/: read_bmp.cpp  read_bmp.h  write_bmp.cpp  write_bmp.h
command_line/: command_args.cpp  command_args.h  help_exception.cpp  help_exception.h
filters/: filter.h  filter_info.cpp  filter_info.h
filters/filter_processing/: check_filters.cpp  check_filters.h  process_filters.cpp  process_filters.h
filters/matrix_filter/: blur.cpp  blur.h  matrix_filter.cpp  matrix_filter.h  sharpening.cpp
filters/other_filter/: crystallize.cpp  crystallize.h  edge.cpp  edge.h
filters/simple_filter/: crop.cpp  crop.h  grayscale.cpp  grayscale.h  negative.cpp
image/: image.h  pixel.cpp  pixel.h
matrix/: matrix.h
tests/: test_bmp.cpp  test_command_line.cpp  test_filters.cpp  test_image.cpp  test_matrix.cpp  test_pixel.cpp
